Used getCameraDescriptionList method once